--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 02. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Frankfurtská</strong>
+<strong>Tomatová s kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vídeňská rostěná s fritátovými brambůrky, cibulkou a pepřovou majonézou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							145,-
-						</span>
-</p>
-<p>
-<strong>Těstoviny s rajčatovo-bazalkovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Bramborák s uzeným masem a salátkem coleslaw</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
+						</span>
+</p>
+<p>
+<strong>Hovězí POT AU FEU</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							129,-
 						</span>
 </p>
 <p>
