--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -190,7 +190,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s tureckymi olivami a kaparami, stredomorsky fusilli salat s cerstvymi rajcaty, paprikami a cuketami {L} 139</li><li>Peceny filet z cerstveho norskeho lososa s tureckymi olivami a kaparami, stredomorsky fusilli salat s cerstvymi rajcaty, paprikami a cuketami {L} 169</li><li>Grilovane malajske veprove marinovane v kokosovem mlece, arasidova omacka, smazena ryze se zeleninou, salatek 139</li><li>Peceny kralik na dijonske horcici, bilem vine a slanine po francouzsku {Lapin ala moutarde}, gratinovane brambory, salatek 169</li><li>Thajske cervene kari s pecenym tofu, brokolici, kokosovym mlekem, citronovou travou a zeleninou, jasminova ryze 139</li></ol>
+<ol><li>Cerstve slavky po thajsku s kokosovym mlekem, zeleninou, thajskou bazalkou, cerstvym chilli a ryzovymi nudlemi 139</li><li>Peceny filet z cerstve prazmy kralovske s okurkovymi tzatziki, stouchane brambory s kapustou, salatek z cervene repy 165</li><li>Burritos s mexickym carnitas {trhane veprove} a goudou, korenena ryze s fazolemi, salatek {L}139</li><li>Rostbif z danci kyty s visnovou omackou na cervenem vine, pecene brambory, salatek 169</li><li>Zapecene papriky s cizrnou, rajcaty, cibulkou a balkanskym syrem, salatek 139 </li></ol>
 </td>
 </tr>
 </table>
