Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,17 @@
 <h5>Pátek, 03. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová s kuřecím masem</strong>
+<strong>Bramborová se zeleninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Bramborák s uzeným masem a salátkem coleslaw</strong>
+<strong>Pečená Vepřová krkovička na česneku a slanině s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
-						</span>
-</p>
-<p>
-<strong>Hovězí POT AU FEU</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
 						</span>
 </p>
 <p>
