Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -45,7 +45,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 3.9.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Květákovo bramborový krém v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Květákovo bramborový krém samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>140g Kuřecí kari, restovaná zelenina, koriandr, černý seznam, basmati rýže <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Portobello žampion zapečený se zeleninovým ragú a sýrem, máslový brambor, míchaný zeleninový salát <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>250g Variace bavorských baget <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Kuskus salát s balkánským sýrem <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>100g Karamelový koláč s restovanými ořechy <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>100g Linecký koláč s borůvkami a tvarohem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>100g Jogurtová bábovka s kokosem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -123,7 +168,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Cerstve slavky po thajsku s kokosovym mlekem, zeleninou, thajskou bazalkou, cerstvym chilli a ryzovymi nudlemi 139</li><li>Peceny filet z cerstve prazmy kralovske s okurkovymi tzatziki, stouchane brambory s kapustou, salatek z cervene repy 165</li><li>Burritos s mexickym carnitas {trhane veprove} a goudou, korenena ryze s fazolemi, salatek {L}139</li><li>Rostbif z danci kyty s visnovou omackou na cervenem vine, pecene brambory, salatek z cervene repy 169</li><li>Zapecene papriky s cizrnou, rajcaty, cibulkou a balkanskym syrem, salatek 139 </li></ol>
+<ol><li>Peceny cerstvy jihocesky siven s citronem, susenymi rajcaty a olivovym olejem, jahlovy salat se zelenymi bylinkami a cerstvou zeleninou 139</li><li>Peceny filet z cerstveho lososoviteho pstruha a morskeho vlka s citronem, susenymi rajcaty a olivovym olejem, jahlovy salat se zelenymi bylinkami a zeleninou 169</li><li>Thajsky larb – opekane veprove s cerstvou zeleninou, zelenymi bylinkami, ryzovymi nudlemi, arasidy a limetkovou zalivkou 139</li><li>Indicke srnci kari s cizrnou a rajcaty, zeleninove birjany z basmati ryze, salatek 165</li><li>Baba ganus – arabsky dip z pecenych lilku a tahini, arabske placky, arabska nakladana zelenina, turecke cerne olivy {L} 139</li></ol>
 </td>
 </tr>
 </table>
