Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Sobota, 04. 09. 2021</h5>
+<h5>Neděle, 05. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Bramborová se zeleninou</strong>
@@ -43,7 +43,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 4.9.2021</div>
+<div class="nadpis">Neděle 5.9.2021</div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -59,19 +59,16 @@
 <h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Ruský boršč se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné bramborové knedlíky s uzeným masem a zelím, škvarky na cibulce</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí kung pao se zeleninou a arašídy, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka s fazolovými lusky, celerové hranolky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený holanský řízek, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné houbové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno, hořčice, křen, beraní roh,cibule, rozpečený chléb</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná vepřovou pečení, česnekovým dresinkem, sýrem, ledovým salátem a zeleninou, smažené bramborové hranolky, tatarka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Ceasar salát promíchaný ančovičkovým dresinkem s kuřecím masem, anglickou slaninou, strouhaný parmazán, česnekové tousty</td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, rolované knedlíky se šunkou, špenát</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%) vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. 150g Vepřové karé, zelený hrášek na másle, grilované rajče, strouhaný parmazán</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Medailonky z kuřecích prsou v bramboráku, zeleninový salát ochucený majonézou</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Burger s dvojitým vepřovým masem 100g + 100g v bulce plněný salátem, sýrem, cibulí, kyselou okurkou, beraním rohem a mexickým dresinkem, smažené bramborové plátky, tatarka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno, grilované brambory, křen, hořčice, cibule, beraní roh</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát se zeleninou a olivami promíchaný olivovým olejem, medailonky z vepřové panenky, balkánský sýr</td><td class="menuPrice">135,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -114,6 +111,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
