--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 05. 09. 2021</h5>
+<h5>Pondělí, 06. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Bramborová se zeleninou</strong>
@@ -43,9 +43,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 5.9.2021</div>
+<div class="nadpis">Pondělí 6.9.2021</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -56,16 +56,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Rizoto po srbsku z vepřového masa se zeleninou, strouhaný sýr</td><td class="menuPrice">109,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí kung pao se zeleninou a arašídy, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Falešná hovězí svíčková špikovaná karotkou a balená v másle se šnitlíkem a parmazánem, bramborové pyré, grilovaná paprika</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné bramborové knedlíky s uzeným masem, dušené bílé zelí, smažená cibulka na sádle</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený hovězí rosbíf, smažené bramborové hranolky, pepřová redukce, volské oko, cibule, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z kuřecích prsou, grilované rajče, listový špenát se smetanou, strouhaný parmazán</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s bolonským ragú, strouhaný sýr</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně, pikantní kovbojské fazole s klobásou, pečené brambory s kmínem</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný brusinkovým dresinkem, hermelín v těstíčku, vařené vejce</td><td class="menuPrice">132,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, rolované knedlíky se šunkou, špenát</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%) vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. 150g Vepřové karé, zelený hrášek na másle, grilované rajče, strouhaný parmazán</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Medailonky z kuřecích prsou v bramboráku, zeleninový salát ochucený majonézou</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Burger s dvojitým vepřovým masem 100g + 100g v bulce plněný salátem, sýrem, cibulí, kyselou okurkou, beraním rohem a mexickým dresinkem, smažené bramborové plátky, tatarka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno, grilované brambory, křen, hořčice, cibule, beraní roh</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát se zeleninou a olivami promíchaný olivovým olejem, medailonky z vepřové panenky, balkánský sýr</td><td class="menuPrice">135,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0.4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -111,6 +108,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Krémová česnečka s chlebovými krutony 1ab,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí maso s křenovou omáčkou a našimi hoskovými knedlíky 1a,3,7,9</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Naše sekaná se sázeným vejcem, bramborovou kaší a nakládanou okurkou 1a,3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Fish &amp; Chips - tmavá treska v těstíčku s hranolky, opečeným citronem, česnekovým dresinkem a trhaným salátem 1a,3,4,7,10</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
