Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,14 +7,21 @@
 <h5>Pondělí, 06. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Bramborová se zeleninou</strong>
+<strong>Mrkvová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Pečená Vepřová krkovička na česneku a slanině s rýží</strong>
+<strong>Dušené vepřové na kari s rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							127,-
+						</span>
+</p>
+<p>
+<strong>Špagety bolognesse s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
@@ -120,7 +127,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky siven s citronem, susenymi rajcaty a olivovym olejem, jahlovy salat se zelenymi bylinkami a cerstvou zeleninou 139</li><li>Peceny filet z cerstveho lososoviteho pstruha a morskeho vlka s citronem, susenymi rajcaty a olivovym olejem, jahlovy salat se zelenymi bylinkami a zeleninou 169</li><li>Thajsky larb – opekane veprove s cerstvou zeleninou, zelenymi bylinkami, ryzovymi nudlemi, arasidy a limetkovou zalivkou 139</li><li>Indicke srnci kari s cizrnou a rajcaty, zeleninove birjany z basmati ryze, salatek 165</li><li>Baba ganus – arabsky dip z pecenych lilku a tahini, arabske placky, arabska nakladana zelenina, turecke cerne olivy {L} 139</li></ol>
+<ol><li>Peceny hejk s arasidovou omackou, smazena ryze s letni zeleninou, salatek 139</li><li>Peceny filet z cerstveho chnapala a halibuta s arasidovou omackou, smazena ryze s letni zeleninou, salatek 169</li><li>Libanonska govurma {restovane hovezi} s cizrnovym hummusem, arabske placky, salatek, citron {L} 139</li><li>Grilovane medailonky z krutich prsou s jablecno-zazvorovym catny, pecene brambory, salatek 169</li><li>Ful medames – egyptske boby s rajcaty, paprikami, sazenym vajickem a zelenymi bylinkami, salatek 139</li></ol>
 </td>
 </tr>
 </table>
