Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -127,7 +127,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny hejk s arasidovou omackou, smazena ryze s letni zeleninou, salatek 139</li><li>Peceny filet z cerstveho chnapala a halibuta s arasidovou omackou, smazena ryze s letni zeleninou, salatek 169</li><li>Libanonska govurma {restovane hovezi} s cizrnovym hummusem, arabske placky, salatek, citron {L} 139</li><li>Grilovane medailonky z krutich prsou s jablecno-zazvorovym catny, pecene brambory, salatek 169</li><li>Ful medames – egyptske boby s rajcaty, paprikami, sazenym vajickem a zelenymi bylinkami, salatek 139</li></ol>
+<ol><li>Peceny hejk s arasidovou omackou, smazena ryze s letni zeleninou, salatek 139</li><li>Peceny filet z cerstveho chnapala a halibuta s arasidovou omackou, smazena ryze s letni zeleninou, salatek 169</li><li>Libanonska govurma {restovane hovezi} s cizrnovym hummusem, arabske placky, salatek, citron {L} 139</li><li>Grilovane medailonky z krutich prsou s jablecno-zazvorovym catny, pecene brambory, salatek 169</li><li>Ful medames – egyptske boby s rajcaty, paprikami, sazenym vajickem, zaatarem a zelenymi bylinkami, salatek 139</li></ol>
 </td>
 </tr>
 </table>
