--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pondělí, 06. 09. 2021</h5>
+<h5>Úterý, 07. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Mrkvová</strong>
@@ -50,34 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 6.9.2021</div>
+<div class="nadpis">Úterý 7.9.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Kapustová polévka s restovanou slaninou v menu <em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kapustová polévka s restovanou slaninou samostatně <em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>250g Pečené kuřecí stehno s máslovou zeleninou a basmati rýží <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Steak z vepřové krkovice s hořčičnou omáčkou, pečené grenaille brambory <em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Špagety s houbovou omáčkou sypané parmazánem a rukolou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -88,13 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky</td><td class="menuPrice">Vyprodáno</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hráškový krém s krutony</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Rizoto po srbsku z vepřového masa se zeleninou, strouhaný sýr</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí kung pao se zeleninou a arašídy, dušená jasmínová rýže</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Falešná hovězí svíčková špikovaná karotkou a balená v másle se šnitlíkem a parmazánem, bramborové pyré, grilovaná paprika</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné bramborové knedlíky s uzeným masem, dušené bílé zelí, smažená cibulka na sádle</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený hovězí rosbíf, smažené bramborové hranolky, pepřová redukce, volské oko, cibule, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z kuřecích prsou, grilované rajče, listový špenát se smetanou, strouhaný parmazán</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s bolonským ragú, strouhaný sýr</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně, pikantní kovbojské fazole s klobásou, pečené brambory s kmínem</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný brusinkovým dresinkem, hermelín v těstíčku, vařené vejce</td><td class="menuPrice">Vyprodáno</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažené holandské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dušená hovězí roštěná na houbách, dušená jasmínová rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřové kostky na česneku, rolované bramborové knedlíky, špenát</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo, naše esa párky (97% masa, bezlepkové) škvarky s cibulí, volské oko ,kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Pečený marinovaný květák v jogurtu se sýrem s kapkou hořčice, rukolový salát s rajčaty a bazalkovým pestem, vařené vejce</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné kari omáčce s kapkou dijonské hořčice, restované špecle</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Sýrová pšeničná quesadilla se zakysanou smetanou, kukuřicí, sušenými rajčaty a plátkovanou vepřovou panenkou, smažené bramborové plátky, česnekový dip</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát se zeleninou promíchaný majonézovým dresinkem, čerstvé olivy, plátkovaná kuřecí prsa</td><td class="menuPrice">133,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">Vyprodáno</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dnes na Čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 11° - ležák</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Extra chmelená 12°</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL Grep čepovaný (nealko)</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka</td><td class="menuPrice">25,-</td></tr></tbody>
@@ -143,6 +118,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Slepičí vývar se zeleninou, masem a nudlemi 1a,3,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažený vepřový řízek s mačkanými brambory s pažitkou a okurkovým salátem 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Krůtí nudličky na červeném curry se zeleninou, kokosovým mlékem a jasmínovou rýží 6</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Zapečené plněné žampiony brynzou balené v anglické slanině na farmářském zeleninovém salátu s pečenými brambory Grenaille a jogurtovým dresinkem 3,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
