Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Úterý, 07. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Mrkvová</strong>
+<strong>Dršťková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Dušené vepřové na kari s rýží</strong>
+<strong>Hovězí s koprovou omáčkou a vařeným bramborem nebo houskovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Špagety bolognesse s parmazánem</strong>
+<strong>Míchaný salát s grilovanými kuřecími křidélky a medovo-hořčičným dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
